--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 	//DB
 	runtimeOnly 'com.h2database:h2'
 
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 
 tasks.named('test') {
