--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -44,7 +44,11 @@ dependencies {
 	//DB
 	runtimeOnly 'com.h2database:h2'
 
+	//유효성
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//이메일 인증
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 }
 
