--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	//security
@@ -42,7 +43,6 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
 	//DB
-	runtimeOnly 'com.h2database:h2'
 
 	//유효성
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
