--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -50,6 +50,10 @@ dependencies {
 	//이메일 인증
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	// QR코드 생성, Zxing 라이브러리
+	implementation group: 'com.google.zxing', name: 'core', version: '3.5.1'
+	implementation group: 'com.google.zxing', name: 'javase', version: '3.5.1'
+
 }
 
 tasks.named('test') {
