Feat: MySQL 의존성 추가

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -42,7 +42,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
 	//DB
-	runtimeOnly 'com.mysql:mysql-connector-j'
+//	runtimeOnly 'com.mysql:mysql-connector-j'
+//	runtimeOnly 'com.h2database:h2'
+	implementation 'mysql:mysql-connector-java:8.0.33'
 
 	//유효성
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
