--- a/FE/package.json
+++ b/FE/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-js-pagination": "^3.0.3",
