--- a/FE/Dockerfile
+++ b/FE/Dockerfile
@@ -10,7 +10,7 @@ RUN npm cache clean --force
 
 RUN npm install
 
-RUN npm install vite --save-dev
+RUN npm install -g vite --save-dev
 
 COPY . .
 
