--- a/BE/Jenkinsfile
+++ b/BE/Jenkinsfile
@@ -30,26 +30,37 @@ pipeline {
             }
         }
 
-        // 백엔드 프로젝트 빌드
-        stage("Build") {
+        // Docker 이미지 빌드
+        stage("Docker Image Build") {
             steps {
-                script {
-                    try {
-                        sh """
-                            cd ${PROJECT_DIR_BE}
-                            chmod 777 ./gradlew
-                            ls -al
-                            pwd
-                            ./gradlew clean build
-                        """
-                    } catch (Exception e) {
-                        // 빌드 중 오류가 발생하면, 파이프라인 실행을 중단합니다.
-                        echo "Build failed, stopping the pipeline: ${e.getMessage()}"
-                        error "Stopping the pipeline because the build stage failed."
+                dir("${PROJECT_DIR_BE}") {
+                    script {
+                        sh "docker build --no-cache -t ${IMAGE_NAME_BE} ."
                     }
                 }
             }
         }
+
+        // 백엔드 프로젝트 빌드
+        // stage("Build") {
+        //     steps {
+        //         script {
+        //             try {
+        //                 sh """
+        //                     cd ${PROJECT_DIR_BE}
+        //                     chmod 777 ./gradlew
+        //                     ls -al
+        //                     pwd
+        //                     ./gradlew clean build
+        //                 """
+        //             } catch (Exception e) {
+        //                 // 빌드 중 오류가 발생하면, 파이프라인 실행을 중단합니다.
+        //                 echo "Build failed, stopping the pipeline: ${e.getMessage()}"
+        //                 error "Stopping the pipeline because the build stage failed."
+        //             }
+        //         }
+        //     }
+        // }
 
         // 컨테이너 클리닝
         stage("Docker Container Cleaning") {
