--- a/BE/Jenkinsfile
+++ b/BE/Jenkinsfile
@@ -6,6 +6,8 @@ pipeline {
         CONTAINER_NAME_BE = "Reseng_Back_Dev"
         APPLICATION_YML_PATH = "/usr/spring/resources"
         PROJECT_DIR_BE = "BE"
+        JAVA_HOME = "/opt/jdk-21"  // Java 21 설치 경로를 지정
+        PATH = "${JAVA_HOME}/bin:${PATH}"
     }
 
     stages {
