--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -55,6 +55,11 @@ dependencies {
 	implementation group: 'net.glxn.qrgen', name: 'javase', version: '2.0'
 	implementation group: 'com.google.zxing', name: 'core', version: '3.5.1'
 
+	// Map Struct
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
 }
 
 tasks.named('test') {
