--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -23,6 +23,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	mapstructVersion = "1.6.0"
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -56,9 +60,8 @@ dependencies {
 	implementation group: 'com.google.zxing', name: 'core', version: '3.5.1'
 
 	// Map Struct
-	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
-	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
 }
 
