Feat:핸드폰 번호 인증 추가 1.build.gradle 의존성 추가 2.MessageAutoDTO,MessageDto,SmsRequest,SmsResponse 추가 3.SmsCoontroller 추가 4.SmsServiceWithRedis 추가

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 	//이메일 인증
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	//핸드폰 인증
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
@@ -67,6 +70,7 @@ dependencies {
 
 	// uuid
 	implementation group: 'net.glxn.qrgen', name: 'javase', version: '2.0'
+
 
 }
 
