--- a/FE/package.json
+++ b/FE/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
     "react": "^18.3.1",
