--- a/FE/package.json
+++ b/FE/package.json
@@ -14,12 +14,13 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.11",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
