Fix: Jenkinsfile 수정 EC2 내부에 Docker Cache가 누적해서 쌓이지 않도록 Jenkinsfile 수정

--- a/FE/Jenkinsfile
+++ b/FE/Jenkinsfile
@@ -60,6 +60,13 @@ pipeline {
             }
         }
 
+        // 빌드 캐시 정리 단계 추가
+        stage("Docker Cache Cleaning") {
+            steps {
+                sh "docker builder prune -f"
+            }
+        }
+
         // 컨테이너 실행
         stage("Docker Container Run") {
             steps {
