Fix: 카카오 로그인 리다이렉트

--- a/FE/nginx.conf
+++ b/FE/nginx.conf
@@ -11,7 +11,16 @@ http {
             index index.html;
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
-        }   
+        }  
+
+        # /oauth2, /api 등 특정 경로는 백엔드로 전달
+        location /oauth2/ {
+            proxy_pass https://reseng.co.kr;
+        }
+
+        location /api/ {
+            proxy_pass https://reseng.co.kr;
+        } 
     }    
 }
 
