--- a/FE/package.json
+++ b/FE/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
