--- a/FE/package.json
+++ b/FE/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.0",
     "framer-motion": "^11.11.11",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -22,6 +26,7 @@
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
