--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -87,6 +87,8 @@ dependencies {
 	//s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+	implementation 'org.jsoup:jsoup:1.15.4'
+
 	// Test 환경에서 QueryDSL 세팅 : jakarta.persistence의 API 가용성 보장
 //	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //	testImplementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
