--- a/FE/package.json
+++ b/FE/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.0",
     "framer-motion": "^11.11.11",
+    "quill": "^2.0.2",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
