--- a/FE/package.json
+++ b/FE/package.json
@@ -18,7 +18,7 @@
     "dompurify": "^3.2.0",
     "framer-motion": "^11.11.11",
     "quill": "^1.3.7",
-    "quill-image-resize-module-react": "^3.0.0",
+    "quill-image-resize": "^3.0.9",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
