--- a/FE/package.json
+++ b/FE/package.json
@@ -17,14 +17,15 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.0",
     "framer-motion": "^11.11.11",
-    "quill": "^1.3.7",
     "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^6.27.0"
   },
