--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@types/dompurify": "^3.0.5",
     "axios": "^1.7.7",
+    "chroma-js": "^3.1.2",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.0",
     "framer-motion": "^11.11.11",
@@ -26,7 +27,8 @@
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-quill-new": "^3.3.3",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
