--- a/FE/package.json
+++ b/FE/package.json
@@ -28,7 +28,9 @@
     "react-modal": "^3.16.1",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^6.27.0",
-    "react-select": "^5.8.3"
+    "react-select": "^5.8.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
